# GenAI-FastAPI-K8s

./: .dockerignore  README.md  config.docker.properties  deployment.yaml  dockerfile  pyproject.toml  service.yaml
src/: app.py  config.properties  service.py  utils.py
src/data/: daily.csv  history.csv
src/output/: anomalies_6002b57d-0426-4351-a34a-f72d2a8d2ce8.csv  corrected_6002b57d-0426-4351-a34a-f72d2a8d2ce8.csv
src/utils/: service_train_model.py
