[project]
name = "code"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "openai (>=1.68.2,<2.0.0)",
    "google-api-python-client (>=2.165.0,<3.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "transformers (>=4.50.0,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "datasets (>=3.5.0,<4.0.0)",
    "accelerate (>=1.5.2,<2.0.0)",
    "google (>=3.0.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
